# mangagraph

./: .env.example  .gitignore  example.py  justfile  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: python-publish.yml
mangagraph/: __init__.py  cli.py  client.py  constants.py  exceptions.py  mangagraph.py  models.py  parser.py  storage.py  telegraph.py  utils.py
tests/: __init__.py  test_cli.py  test_client.py  test_storage.py  test_telegraph.py  test_utils.py
