[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mangagraph"
version = "0.2.0"
description = "Async manga parser-converter from mangalib to telegraph pages"
readme = "readme.md"
license = { text = "MIT" }
authors = [
    { name = "damirTAG", email = "damirtagilbayev17@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
    "sqlalchemy>=1.4.0",
    "telegraph[aio]>=2.2.0",
]
keywords = [
    "mangalib",
    "mangalib-parser",
    "manga",
    "telegraph",
    "async",
    "parser",
    "converter",
    "web-scraping",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
"Source" = "https://github.com/damirTAG/mangagraph"
"Bug Reports" = "https://github.com/damirTAG/mangagraph/issues"
"Telegram" = "https://t.me/damirtag"

[project.scripts]
mangagraph = "mangagraph.cli:run"

[tool.setuptools.packages.find]
include = ["mangagraph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
